fix aplikimi dark mode

--- a/assets/css/dark-mode.css
+++ b/assets/css/dark-mode.css
@@ -603,8 +603,9 @@
   border-bottom-color: #404040;
 }
 
-.dark-mode .form-control {
-  color: #bebebe;
+.dark-mode .form-control,
+.dark-mode .form-control:focus {
+  color: #fff;
   background-color: #171717;
   border-color: #404040;
 }
